2009-06-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	organize XPM code characters in a tree
	(avt_free_xpm_tree): new function

2009-05-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm_RW):
	improve memory handling a further

2009-05-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	support for images with more than 256 colors

	* avatar.c (avt_load_image_xpm_RW):
	improve memory handling a little

2009-05-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (calculate_balloonmaxheight)
	(avt_change_avatar_image, avt_initialize):
	avatarsay.c (handle_avatarimage_command):
	fix handling when avatar-image is too large

2009-05-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	support for grayscale images

2009-05-22  Andreas K. Foerster  <info@akfoerster.de>

	* configure, avatar.c (load_image_initialize):
	"./configure --disable-sdl-image"

2009-05-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	support up to 256 colors

	* avatar.c (avt_change_avatar_image, avt_initialize):
	use SDL_DisplayFormatAlpha also for images with colorkey
	(still don't know why, but it fixed a strange problem)

2009-05-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm_RW, avt_load_image_RW)
	(avt_load_image_file): new functions
	(load_image_initialize): use new functions
	(avt_load_image_bmp): removed

2009-05-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_LoadAU_RW):
	try to get the data-size when it's not given in the header

	* avatar-audio.c (avt_LoadAU_RW):
	check the number of channels

2009-05-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_LoadAU_RW):
	rewritten not to waste memory (but may be slower)
	(avt_get_RWdata): new function

2009-05-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-default.c (avt_default):
	use XPM image
