@@ -249,19 +249,22 @@ void avt_free_image (avt_image_t * image);
 avt_image_t *avt_make_transparent (avt_image_t * image);
 
 /*
- * define the backgroud color
+ * define the background color
  * values in the range 0x00 .. 0xFF
  * can and should be called before avt_initialize
  * if the balloon is visible, it is cleared
  */
 void avt_set_background_color (int red, int green, int blue);
+void avt_set_background_color_name (const char *name);
 
 /*
  * change the text color
  * values in the range 0x00 .. 0xFF
  */
 void avt_set_text_color (int red, int green, int blue);
+void avt_set_text_color_name (const char *name);
 void avt_set_text_background_color (int red, int green, int blue);
+void avt_set_text_background_color_name (const char *name);
 
 /* set underlined mode on or off */
 void avt_underlined (avt_bool_t onoff);
