@@ -1,3 +1,11 @@
+2009-06-04  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar.c (avt_set_background_color_name)
+	(avt_set_text_color_name)
+	(avt_set_text_background_color_name): new functions
+	(avt_name_to_color): new function
+	(avt_load_image_xpm): adapted
+
 2009-06-02  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c (avt_load_image_xpm):
